# cpp-cmake-starter

./: .clang-format  .clang-tidy  CMakeLists.txt  build.sh  ci.sh  cmake-add-dep.sh  readme.md  test.sh
src/: starter.bench.cc  starter.test.cc
